Small bug fix for dark mode.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -376,7 +376,7 @@ footer {
     }
   }
 
-  footer .top {
+  footer {
     background: transparent;
   }
 }
